--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<html>
 	<head>	
+		<link rel="stylesheet" type="text/css" href="styles.css">
 <title>Web Dev 2 Activity 5 - Roshan Tolentino</title>
 	</head>
 	<body>
